[tool.poetry]
name = "investment portfolio"
version = "0.1.0"
description = "Investment Portfolio strategies and management"
authors = ["IK <ivandkyulev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
